--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
+
     <string name="app_name">GymPartner</string>
+    <string name="iniciar_sesion">Iniciar Sesion</string>
+    <string name="crear_cuenta">Crear Cuenta</string>
+    <string name="msg_sign_in">No tienes cuenta? ¡Únete a GymPartner!</string>
+    <string name="m_s_fitness_que_nunca">¡Más fitness que nunca!</string>
+    <string name="contrase_a">Contraseña</string>
+    <string name="email">Email</string>
+
 </resources>
