Add string msg in string.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="full_name">Nombre completo</string>
     <string name="forgot_password">Olvidaste la contraseña</string>
     <string name="login_with">Inicie con</string>
+    <string name="wrong_email">Estructura de email no valida</string>
+    <string name="wrong_password">Contraseña minimo de 6 caracteres</string>
 
 </resources>
