--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,9 +36,23 @@
     <string name="accept_login_google">Aceptar</string>
     <string name="title_login_google">¡Ups!, Error inesperado</string>
     <string name="supporting_text_login_google">Vuelve a intentarlo y verifica tu conexion a internet</string>
+
+    <!--     Top app bar options    !-->
     <string name="perfil">Perfil</string>
     <string name="cerrar_sesion">cerrar sesion</string>
+
+    <!--     Image Carousel    !-->
     <string name="imagen">imagen</string>
+
+    <!--     Dialog Close Session      !-->
+    <string name="accept_close_session">Aceptar</string>
+    <string name="title_close_session">Cerrar sesion</string>
+    <string name="supporting_text_close_session">¿Estas seguro de cerrar sesion?</string>
+
+    <!--     Default dialog error      !-->
+    <string name="accept_default_error">Aceptar</string>
+    <string name="title_default_error">¡Ups, Error!</string>
+    <string name="supporting_text_default_error">Ha ocurrido un error inesperado</string>
 
 
 </resources>
