--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
 
     <!--     Image Carousel    !-->
     <string name="imagen">imagen</string>
+    <string name="press_back_again_to_exit">Press back again to exit</string>
 
     <!--     Dialog Close Session      !-->
     <string name="accept_close_session">Aceptar</string>
